--- a/BACNOTAN/index.html
+++ b/BACNOTAN/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html/>
+<html lang="en">
+ <head>
 
+   <meta charset="utf-8"/>
+   <title>IT8</title>
+ 
+
+<link rel="Stylesheet" href="bacnotan.css"  />
+</head>
+<body>
+<div class="head">
+ <div class="nav1">
+
+  <ul>
+  <li><a href="index.html" target="_self">Home</a></li>
+  <li class="dropdown">
+  <a href="places.html" class="dropbtn">Attractions</a>
+    <div class="dropdown-content">
+      <a href="places.html#ch">Church</a>
+      <a href="places.html#pl">Plaza</a>
+      <a href="places.html#lap">Lap Playa</a>
+	  <a href="places.html#pnb">Popoy at Basha</a>
+	  <a href="places.html#river">River Farm</a>
+      <a href="places.html#tree">Centennial Tree</a>
+    </div>
+  <li class="dropdown">
+  <a href="About.html" class="dropbtn">About</a>
+    <div class="dropdown-content">
+      <a href="about.html#history">History</a>
+      <a href="about.html#map">Map</a>
+      <a href="about.html#contacts">Contacts</a>
+    </div>
+	  <li class="dropdown">
+  <a href="products.html" class="dropbtn">Products</a>
+    <div class="dropdown-content">
+      <a href="products.html#honey">Honeybee</a>
+      <a href="products.html#holcim">Holcim Cement</a>
+	  </div>
+</ul>
+</div>
+</div>
+&nbsp;
+<center><img class="image1" src="pictures/bannerline.jpg"></center>
+<div class="container">
+<br>
+<center><h1 class="a"> Welcome to Bacnotan, La Union </h1></center>
+<center><h1 class="b">( The Honey Capital of the North and The Cement Capital of the North)</h1></center>
+<p class="home">Bacnotan is host to cement giant HolcimPhils in Brgy. Quirino; the home of the Don Mariano Marcos Memorial State University main campus with its sprawling campus in Brgy. Sapilang; and the exit point of the rustic Baroro River. Our humble town is further made famous for its silk, vinegar, mushroom, and honey industry.
+The advocacy of Bacnotan in sustainable environmental management has gained for the community its pride to be the right place to live, work, study, invest and for leisure.</p>
+ <p class="home"> Bacnotan is a first class municipality in the province of La Union, Philippines.
+Ilocano is the language spoken. English and Filipino are the languages used in government and business while English is the medium of instruction in schools.
+Economic activities in Bacnotan mostly involve farming, fishing, bee-keeping, pebble extraction, tourism and Portland cement manufacture. Bacnotan is the seat of the beekeeping industry in La Union. A mining engineer from Bacnotan who saw the limestone deposits in Dumarang (renamed Quirino) also saw deposits of coal and traces of gas.
+Schools in Bacnotan include the Don Mariano Marcos Memorial State University, the North Provincial High School (now Bacnotan National High School), the Bacnotan Elementary School, other elementary schools located in various barangays, and a prep school operated by the United Church of Christ in the Philippines in Bacnotan.
+</p>
+<p class="last">Surely, you will like Bacnotan.</p>
+</div>
+<div class="foot">
+<div><center><p><img src="loc.png" alt="rr" width="25" height="25"><span class="style3"> Bacnotan, La Union <img src="sc.png" alt="rr" width="25" height="25"><span class="style3"> Saint Louis College Carlatan, City of San Fernando, La Union <img src="fb.png" alt="rr" width="25" height="25"><span class="style3"> Range Oximana Buccat <img src="ig.png" alt="rr" width="25" height="25"><span class="style3"> babyranzthird <img src="mu.png" alt="rr" width="25" height="25"><span class="style3"> ranzthird <img src="gm.png" alt="rr" width="25" height="25"><span class="style3"> rangeoximanabuccat16@gmail.com</span>
+				<p><img src="add.png" alt"rr" width="25" height="20"> <img src="fb.png" alt="rr" width="25" height="20"> <img src="ig.png" alt="rr" width="25" height="20"> <img src="mu.png" alt="rr" width="25" height="20"> </span></center></div>
+
+		<br><br></br></br>		
+				</div>
+</body>
+</html>
+   
